add the navbar markup

--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
   <title>JBCeramics</title>
 </head>
 <body>
-  <h1>HELLO!</h1>
+  <header>
+    <h1>John Brown | Ceramics</h1>
+    <nav>
+      <ul>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
   
 </body>
 </html>
