add styling to the navbar

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <title>JBCeramics</title>
 </head>
 <body>
-  <header>
+  <header class="navbar">
     <h1>John Brown | Ceramics</h1>
-    <nav>
+    <nav class="links">
       <ul>
-        <li><a href="#work">Work</a></li>
+        <li><a class="active" href="#work">Work</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
